# package-python-function

./: README.md  pyproject.toml
.github/workflows/: pull_request.yml
package_python_function/: main.py  packager.py  python_project.py  reproducible_zip.py  reproducible_zipfile.py
scripts/poc/: README.md  lambda-runner.py  pyproject.toml
scripts/poc/inner_package/other_package/: other_package_module.py
scripts/poc/inner_package/zip_in_zip_test/: __init__.py  main.py  other_module.py
scripts/poc/zip_in_zip_test/: __init__.py
tests/: conftest.py  test_local.py  test_package_python_function.py
tests/projects/project-1/: pyproject.toml
