[tool.poetry]
name = "package-python-function"
version = "0.1.0"
description = "Python script to package a Python function for deploying to AWS Lambda"
authors = ["BrandonLWhite <brandonlwhite@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-mypy-runner = "^1.0.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
package-python-function = "package_python_function.main:main"